<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_research_lab</name>
  <version>0.1.0</version>
  <description>Masters Level SLAM Digital Twin</description>
  <maintainer email="researcher@university.edu">Researcher</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>slam_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
